--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,15 +9,24 @@
         "lint": "eslint ."
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.2.4",
+        "@react-google-maps/api": "^2.20.8",
         "@tailwindcss/vite": "^4.1.18",
         "axios": "^1.13.4",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.563.0",
         "react": "^19.2.4",
         "react-dom": "^19.2.0",
         "react-router-dom": "^7.13.0",
-        "tailwindcss": "^4.1.18"
+        "react-toastify": "^11.0.5",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss": "^4.1.18",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
+        "@types/node": "^25.2.0",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react": "^5.1.1",
