--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -17,14 +17,12 @@ django-redis==6.0.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.14
-Flask==3.1.2
 h11==0.16.0
 idna==3.11
 importlib_metadata==8.7.1
 inflection==0.5.1
 itsdangerous==2.2.0
 itypes==1.2.0
-Jinja2==3.1.6
 MarkupSafe==3.0.3
 mypy_extensions==1.1.0
 openapi-codec==1.3.2
@@ -58,6 +56,9 @@ tzdata==2025.3
 uritemplate==4.2.0
 urllib3==2.6.3
 websocket-client==1.9.0
-Werkzeug==3.1.5
 wsproto==1.3.2
 zipp==3.23.0
+
+gunicorn
+whitenoise
+dj-database-url
